tests/paczka1/small_fuzzy/75989855.err
Error in line 8: 15i A531 -3,2
Error in line 5: gmhGO0TdMGx A44 39,5
